[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal_env"
version = "0.1.0"
description = "A Python package for causal environment simulations."
authors = [{name = "Tyler Bonnell", email = "tyler.bonnell@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = ["numpy", "networkx"]
requires-python = ">=3.7"
